<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:paddingLeft="6dp"
        android:paddingTop="4dp"
        android:paddingBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/apps_search"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:hint="@string/apps_search_hint"
            android:singleLine="true"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/apps_search_button"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="6dp"
            android:text="@string/search" />

        <Spinner
            android:id="@+id/apps_sort"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/apps_master_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:text="@string/return_master_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/apps_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" />
    </ScrollView>
</LinearLayout>